--- a/CAPSProj/src/main/resources/application.properties
+++ b/CAPSProj/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/caps?useSSL=false&serverTimezone=Asia/Singapore&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/caps?useSSL=false&serverTimezone=Asia/Singapore
 spring.datasource.username=root
-spring.datasource.password=G8LP9zOQrP$
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-spring.thymeleaf.prefix=classpath:/templates/lecturer/
