--- a/CAPSProj/src/main/resources/application.properties
+++ b/CAPSProj/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/caps?useSSL=false&serverTimezone=Asia/Singapore
 spring.datasource.username=root
-spring.datasource.password=zhaoqi123
+spring.datasource.password=G8LP9zOQrP$
 spring.jpa.hibernate.ddl-auto=update
