--- a/CAPSProj/src/main/resources/application.properties
+++ b/CAPSProj/src/main/resources/application.properties
@@ -1,4 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/caps?useSSL=false&serverTimezone=Asia/Singapore
 spring.datasource.username=root
-spring.datasource.password=zhaoqi123
+spring.datasource.password=
+
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nusisssa52t2
+spring.mail.password=lipvttkypbnlhjpl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
