--- a/CAPSProj/src/main/resources/application.properties
+++ b/CAPSProj/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/caps?useSSL=false&serverTimezone=Asia/Singapore
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=qwaszx123
 spring.jpa.hibernate.ddl-auto=update
 
 spring.sql.init.mode=always
