--- a/CAPSProj/pom.xml
+++ b/CAPSProj/pom.xml
@@ -54,6 +54,15 @@
 			<version>5.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
