--- a/CAPSProj/src/main/resources/application.properties
+++ b/CAPSProj/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.sql.init.mode=always
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nusisssa52t2
+spring.mail.password=lipvttkypbnlhjpl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
