--- a/CAPSProj/pom.xml
+++ b/CAPSProj/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.1</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
 	<groupId>sg.edu.iss</groupId>
 	<artifactId>CAPSProj</artifactId>
@@ -48,14 +48,8 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-<<<<<<< HEAD
-=======
-
-
->>>>>>> branch 'ronnie' of https://github.com/ayephyusin/capsproj
 		<dependency>
-<<<<<<< HEAD
-			<groupId>com.opencsv</groupId>
+		<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>5.4</version>
 		</dependency>
@@ -71,8 +65,6 @@
 		</dependency>
 
 		<dependency>
-=======
->>>>>>> branch 'ronnie' of https://github.com/ayephyusin/capsproj
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-java8time</artifactId>
 		</dependency>
@@ -93,18 +85,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context-support</artifactId>
-		</dependency>
 	</dependencies>
-
-
 
 	<build>
 		<plugins>
