--- a/CAPSProj/bin/pom.xml
+++ b/CAPSProj/bin/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.1</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath />
 	</parent>
 	<groupId>sg.edu.iss</groupId>
 	<artifactId>CAPSProj</artifactId>
@@ -48,13 +48,26 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>5.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.7.1</version>
+		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
@@ -77,12 +90,22 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
-	</dependencies>
+      		<groupId>org.junit.jupiter</groupId>
+      		<artifactId>junit-jupiter</artifactId>
+      		<scope>test</scope>
+    	</dependency>
 
+    	<dependency>
+      		<groupId>org.mockito</groupId>
+      		<artifactId>mockito-junit-jupiter</artifactId>
+      		<scope>test</scope>
+    	</dependency>
+    	
+
+    	
+	</dependencies>
 
 	<build>
 		<plugins>
