--- a/CAPSProj/pom.xml
+++ b/CAPSProj/pom.xml
@@ -112,6 +112,13 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>app.com.MainClass</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
